# one

./: .env.example  .gitignore  Cargo.toml  README.md  article.md
.cargo/: zig-link.sh
.codegraph/: .gitignore
.github/workflows/: ci.yml
.one/agents/: research.json
benches/: README.md  run.sh
benches/cmd/: codex.sh  compare.sh  offline.sh  one.sh  tasks.sh  wizard.sh
benches/lib/: common.sh  score_task.py  summarize_codex_events.py
benches/projects/broken-kit/: Cargo.toml  README.md  SOLUTIONS.md  verify.sh
benches/projects/broken-kit/src/: cart.rs  catalog.rs  ledger.rs  lib.rs  main.rs  money.rs  promo.rs  schedule.rs
benches/tasks/edit-marker/: prompt.md  rubric.json  task.json
benches/tasks/edit-marker/fixture/: Cargo.toml
benches/tasks/edit-marker/fixture/src/: lib.rs  main.rs
benches/tasks/edit-resilient/: SOLUTIONS.md  prompt.md  rubric.json  task.json
benches/tasks/edit-resilient/fixture/: Cargo.toml
benches/tasks/edit-resilient/fixture/src/: crlf_util.rs  lib.rs  main.rs
benches/tasks/kit-baseline/: prompt.md  rubric.json  task.json
benches/tasks/kit-fix-all/: prompt.md  rubric.json  task.json
benches/tasks/kit-fix-cart/: prompt.md  rubric.json  task.json
benches/tasks/kit-fix-discount/: prompt.md  rubric.json  task.json
benches/tasks/kit-fix-ledger/: prompt.md  rubric.json  task.json
benches/tasks/kit-fix-parse/: prompt.md  rubric.json  task.json
benches/tasks/kit-fix-search/: prompt.md  rubric.json  task.json
benches/tasks/mock-list-files/: prompt.md  rubric.json  task.json
benches/tasks/tb-cancel-async-tasks/: SOLUTIONS.md  SOURCE.md  prompt.md  rubric.json  task.json
benches/tasks/tb-cancel-async-tasks/fixture/: README.md  test.py  verify.py
benches/tasks/tb-circuit-fibsqrt/: SOLUTIONS.md  SOURCE.md  prompt.md  rubric.json  task.json
benches/tasks/tb-circuit-fibsqrt/fixture/: README.md  verify.py
benches/tasks/tb-feal-linear/: SOLUTIONS.md  SOURCE.md  prompt.md  rubric.json  task.json
benches/tasks/tb-feal-linear/fixture/: README.md  ciphertexts.txt  pairs.txt  prepare_fixture.sh  verify.py
benches/tasks/tb-path-tracing/: SOLUTIONS.md  SOURCE.md  prompt.md  rubric.json  task.json
benches/tasks/tb-path-tracing/fixture/: README.md  verify.py
benches/tasks/tb-polyglot-rust-c/: SOLUTIONS.md  SOURCE.md  prompt.md  rubric.json  task.json
benches/tasks/tb-polyglot-rust-c/fixture/: README.md  verify.py
benches/tasks/tb-regex-chess/: SOLUTIONS.md  SOURCE.md  prompt.md  rubric.json  task.json
benches/tasks/tb-regex-chess/fixture/: README.md  check.py  verify.py
benches/tasks/tb-write-compressor/: SOLUTIONS.md  SOURCE.md  prompt.md  rubric.json  task.json
benches/tasks/tb-write-compressor/fixture/: README.md  verify.py
benches/tasks/trace-smoke/: prompt.md  rubric.json  task.json
benches/tasks/trace-smoke/fixture/: note.txt
crates/one-ai/: Cargo.toml
crates/one-ai/src/: anthropic.rs  cache.rs  compat.rs  gemini.rs  lib.rs  media.rs  mock.rs  models_file.rs  ollama.rs  openai.rs  openai_codex.rs  openai_codex_models.rs  opencode_models.rs  openrouter.rs  registry.rs  remote_models.rs  sse.rs  thinking.rs  xai_models.rs
crates/one-ai/src/auth/: login_opencode.rs  mod.rs  oauth_codex.rs  oauth_xai.rs  pkce.rs  storage.rs  types.rs
crates/one-cli/: Cargo.toml
crates/one-cli/src/: agent_cmd.rs  approval.rs  auth_cmd.rs  bench_cmd.rs  cli.rs  hitl.rs  langfuse.rs  main.rs  mcp_cmd.rs  preferences.rs  protocol.rs  provider.rs  runtime.rs  settings.rs  trace_cmd.rs
crates/one-cli/src/modes/: interactive.rs  mod.rs  print.rs  rpc.rs
crates/one-cli/src/runtime/: build.rs  explore_tools.rs  features.rs  harness.rs  helpers.rs  job_tools.rs  jobs.rs  mod.rs  mode.rs  plan.rs  policy.rs  presets.rs  prompt.rs  prompt_compose.rs  provider_limit.rs  reload.rs  session.rs  subscribe.rs  task_tool.rs  tool_materialize.rs  tools.rs  worktree.rs
crates/one-cli/tests/: e2e_mock.rs
crates/one-core/: Cargo.toml
crates/one-core/src/: agent.rs  compaction.rs  error.rs  events.rs  hooks.rs  image.rs  lib.rs  message.rs  streaming.rs  tool.rs  tool_gate.rs  trace.rs
crates/one-ext/: Cargo.toml
crates/one-ext/examples/: status_extension.rs
crates/one-ext/src/: builtin.rs  data.rs  dylib.rs  error.rs  events.rs  hooks.rs  lib.rs  loader.rs  plugin.rs  registry.rs  runtime.rs  traits.rs
crates/one-mcp/: Cargo.toml
crates/one-mcp/src/: config.rs  error.rs  lib.rs  manager.rs  naming.rs  paths.rs  tool.rs
crates/one-resources/: Cargo.toml
crates/one-resources/skills/create-skill/: SKILL.md
crates/one-resources/src/: agents.rs  builtin_skills.rs  error.rs  lib.rs  loader.rs  prompts.rs  skills.rs
crates/one-session/: Cargo.toml
crates/one-session/src/: context.rs  entries.rs  error.rs  export.rs  lib.rs  manager.rs  migrate.rs  paths.rs  prompt_history.rs  share.rs
crates/one-session/tests/: branch_navigation.rs  migrate_roundtrip.rs
crates/one-tools/: Cargo.toml
crates/one-tools/src/: ask_user.rs  bash.rs  bash_kill.rs  bash_output.rs  edit.rs  edit_diff.rs  find.rs  grep.rs  lib.rs  ls.rs  os_sandbox.rs  path_policy.rs  permissions.rs  plan.rs  process_io.rs  read.rs  registry.rs  sandbox.rs  sandbox_permissions.rs  tasks.rs  tool_args.rs  truncate.rs  web_fetch.rs  web_search.rs  write.rs
crates/one-tui/: Cargo.toml
crates/one-tui/src/: app.rs  clipboard.rs  float.rs  lib.rs  markdown.rs  message.rs  select.rs  settings.rs  slash.rs  state.rs  terminal.rs  theme.rs  tool_view.rs  ui.rs
docs/: architecture.md  claude-workflow-model.md  cli.md  compat.md  development.md  extensions.md  gap-vs-pi.md  harness-eval.md  mcp.md  memory.md  package-suites.md  protocol.md  roadmap.md  session-format.md  subagents.md
docs/plans/: 2026-07-19-programmatic-subagents.md  2026-07-20-worktree-background.md
docs/superpowers/plans/: 2026-07-22-code-quality.md
docs/superpowers/specs/: 2026-07-22-code-quality-design.md
