[workspace]
resolver = "2"
members = [
    "crates/one-core",
    "crates/one-ai",
    "crates/one-tools",
    "crates/one-session",
    "crates/one-resources",
    "crates/one-ext",
    "crates/one-mcp",
    "crates/one-tui",
    "crates/one-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["fxh"]

[workspace.dependencies]
one-core = { path = "crates/one-core" }
one-ai = { path = "crates/one-ai" }
one-tools = { path = "crates/one-tools" }
one-session = { path = "crates/one-session" }
one-resources = { path = "crates/one-resources" }
one-ext = { path = "crates/one-ext" }
one-mcp = { path = "crates/one-mcp" }
one-tui = { path = "crates/one-tui" }

async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
futures = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }