[package]
name = "one-ai"
description = "One LLM provider abstraction"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
network = ["dep:reqwest"]
http-providers = ["network"]

[dependencies]
one-core.workspace = true
async-trait.workspace = true
base64.workspace = true
futures.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true