[package]
name = "one-cli"
description = "One coding agent CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "one"
path = "src/main.rs"

[features]
# Real LLM providers (OpenAI / Anthropic / OpenRouter / Ollama HTTP) on by default
# so custom models.json endpoints work without an extra --features flag.
default = ["http-providers"]
network = ["one-ai/network", "one-session/network", "one-tools/network"]
http-providers = ["one-ai/http-providers", "network"]

[dependencies]
one-core.workspace = true
one-ai.workspace = true
one-tools.workspace = true
one-session.workspace = true
one-resources.workspace = true
one-ext.workspace = true
one-tui.workspace = true
async-trait.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true