[package]
name = "one-cli"
description = "One coding agent CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "one"
path = "src/main.rs"

[features]
# Real LLM providers (OpenAI / Anthropic / OpenRouter / Ollama HTTP) on by default
# so custom models.json endpoints work without an extra --features flag.
default = ["http-providers"]
network = ["one-ai/network", "one-session/network", "one-tools/network"]
http-providers = ["one-ai/http-providers", "network"]

[dependencies]
one-core.workspace = true
one-ai.workspace = true
one-tools.workspace = true
one-session.workspace = true
one-resources.workspace = true
one-ext.workspace = true
one-mcp.workspace = true
one-tui.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy = "0.15"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
    "trace",
    "rt-tokio",
    "experimental_trace_batch_span_processor_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "trace",
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
] }
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true