[package]
name = "one-resources"
description = "One resource loader: AGENTS.md, skills, prompts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }