[package]
name = "one-tools"
description = "One built-in coding tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# Built-in web_search / web_fetch tools (reqwest).
network = ["dep:reqwest"]

[dependencies]
one-core.workspace = true
async-trait.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
glob = "0.3"
tokio = { workspace = true, features = ["process", "io-util", "time", "fs"] }
reqwest = { workspace = true, optional = true, default-features = false, features = ["json", "rustls-tls"] }